<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".DetailActivity">

    <TextView
        android:id="@+id/tv_detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/title"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/tv_detail_photo"
        android:layout_width="153dp"
        android:layout_height="214dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/photo"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_title"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/detail_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/rating"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_photo"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_photo" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/nilai"
        android:src="@drawable/rating_star"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_photo"
        app:layout_constraintTop_toBottomOf="@+id/detail_score" />

    <TextView
        android:id="@+id/tv_detail_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="25sp"
        android:text="@string/nilai"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/detail_score" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:text="@string/episode"
        android:textSize="10sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_photo"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_rating" />

    <TextView
        android:id="@+id/tv_detail_episode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/episode"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_photo"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:text="@string/status"
        android:textSize="10sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_photo"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_episode" />

    <TextView
        android:id="@+id/tv_detail_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/status"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_photo"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:text="@string/genres"
        android:textSize="10sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_photo"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_status" />

    <TextView
        android:id="@+id/tv_detail_genre"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="15dp"
        android:text="@string/genres"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_rating"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_photo"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/d_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/deskripsi"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_photo"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_photo" />

        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/description"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_share"
            app:layout_constraintStart_toStartOf="@+id/d_description"
            app:layout_constraintTop_toBottomOf="@+id/d_description" />

    <ImageButton
        android:id="@+id/tv_detail_share"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/share"
        app:layout_constraintBottom_toTopOf="@+id/tv_detail_description"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_title"
        app:srcCompat="?attr/actionModeShareDrawable" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
